--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ headercolor: "#FFFFFF"
 logo: /img/logos/Project-Pages-New-Logo-Inverted.png
 
 # Tertiary Parameters
-github_username:  projectpages
-project_repository: project-pages
-disqus_shortname: project-pages
+github_username:  TemiLee
+project_repository: TemiLee.github.io
+disqus_shortname: TemiLee.github.io
 g-analytics: UA-75881392-1
 altmetric: true
 
