new blog and index and music page

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ logo: /img/logos/favicon.png
 # Tertiary Parameters
 github_username:  TemiLee
 project_repository: TemiLee.github.io
-disqus_shortname: TemiLee.github.io
+disqus_shortname: temilee-github-io
 g-analytics: UA-104064895-1
 altmetric: true
 
