--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site settings
 title: Temi Lee
-description: "一名喷子喷不了的技术人员"
+#description: "一名喷子喷不了的技术人员"
+description: "只有那些疯狂到认为自己可以改变世界的人才能真正地改变世界"
 url: "https://temilee.github.io"
 
 
